# debt-tracker

./: .dockerignore  .gitignore  Dockerfile  Pipfile  docker_run.sh  pyproject.toml
src/: config.py  main.py
src/reporter/: __init__.py  reporter.py  types.py
src/scrappers/: edenor.py  edesur.py  metrogas.py  types.py
src/scripts/: edenor.py  edesur.py  full.py  metrogas.py  runner.py
src/telegrambot/: __init__.py  bot.py  presenter.py  types.py  utils.py
src/tracker/: __init__.py  tracker.py  types.py
src/tracker/scrappers/: edenor.py  edesur.py  errors.py  metrogas.py  types.py
src/trackers/: __init__.py  dummy.py  full.py
src/trackers/scrappers/: __init__.py  edenor.py  edesur.py  metrogas.py  types.py
